# calvin

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  README_zh-CN.md  TODO.md  codecov.yml  docs-compose.yml  release-please-config.json  spec.md
.claude/commands/: test.md
.codex/prompts/: test.md
.config/: nextest.toml
.githooks/: pre-commit
.github/instructions/: test.instructions.md
.github/workflows/: ci.yml  docs.yml  homebrew.yml  nightly.yml  release.yml  test-matrix.yml
.promptpack/: README.md  config.toml
.promptpack/0-discovery/: 0-disc-analyze-project.md
.promptpack/1-planning/: 1-plan-api-versioning.md  1-plan-init-project.md
.promptpack/2-init/: 2-init-cicd-setup.md  2-init-monorepo-setup.md
.promptpack/3-development/: 3-dev-migrate-framework.md
.promptpack/4-testing/: 4-test-regression.md  4-test-tdd.md
.promptpack/5-qa/: 5-qa-perf-profile.md
.promptpack/m-maintenance/: m-maint-codebase-cleanup.md  m-maint-git-audit.md
.promptpack/x-utility/: x-util-debug-exception.md  x-util-worktree-review.md
Formula/: calvin.rb
docs/: adapters-migration-tdd.md  analysis-report.md  api-changelog.md  api-versioning-policy.md  architecture-redesign.md  architecture-review.md  architecture.md  cli-state-machine.md  command-reference.md  configuration.md  engine-comparison.md  impl-plan-sc6-cleanup.md  impl-plan-sc7-scope.md  implementation-plan.md  index.md  lockfile-migration-plan.md  pitfall-mitigations.md  refactor-scope-policy.md  refactoring-plan.md  reorganization-log.md  review-3f9b0c8.md  security-audit-report.md  skills.md  sync-audit-report.md  sync-migration-plan.md  target-platforms.md  tdd-session-cli-animation.md  tdd-session-phase1-parser.md  tdd-session-sprint1-us1-us4.md  tdd-session-sprint2-us2-us9.md  tdd-session-sync-refactor.md  tdd-session-v0.2.0-phase0.md  tdd-session-v0.2.0-phase1.md  tdd-session-v0.2.0-phase3.md  tdd-session-v0.2.0-phase4.md  tdd-session-v0.2.0-phase5.md  tdd-session-v0.2.0-polish.md  tech-decisions.md  test-variants-rationale.md  ui-components-spec.md  (+1 more)
docs-content/: _home.mdx  site.config.json
docs-content/docs/: index.mdx  meta.json
docs/api/: README.md  api-review.md  changelog.md  frontmatter.md  json-output.md  library.md  versioning.md
docs/architecture/: README.md  TODO.md  asset-loading-refactor.md  directory.md  docs.md  domain-deps-refactor.md  file-size-guidelines.md  layers.md  migration.md  overview.md  platform.md  ports.md  review-senior.md
docs/archive/: adapters-migration-tdd.md  adapters-rewrite-plan.md  analysis-report-v0.2.md  architecture-redesign-skills.md  cli-animation-reflection.md  compiler-service-refactor-plan.md  cursor-commands-bug-2025-12-24.md  design-deploy-targets.md  engine-migration-plan.md  env-var-validation-refactor.md  json-output-consistency-plan.md  legacy-code-analysis.md  reorganization-log-2025-12-20.md  reorganization-log-2025-12-25.md  sync-cleanup-plan.md  sync-migration-plan.md  sync-module-analysis.md  sync-module-redesign.md  targets-config-bug-2025-12-24.md  tdd-session-compiler-service.md  tdd-session-orphan-detection.md  tdd-session-sc6-cleanup.md  tdd-session-scope-isolation.md  tdd-sessions.md  v0.2-design-principles.md  v0.2-product-reflection.md  windows-home-dir-unification-plan.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_toml.rs  fuzz_json_settings.rs  fuzz_lockfile_key.rs  fuzz_lockfile_toml.rs  fuzz_target_1.rs  fuzz_target_enum.rs
scripts/: check-file-size.sh  install-windows.ps1  setup.sh  worktree-init.sh
src/: cli.rs  config.rs  docs.rs  error.rs  fs.rs  lib.rs  main.rs  models.rs  parser.rs  runtime_state.rs  security.rs  security_baseline.rs  state.rs  watcher.rs
tests/: cli_check.rs  cli_check_all.rs  cli_check_all_layers.rs  cli_check_respects_user_layer_promptpack_security_config.rs  cli_clean.rs  cli_clean_all.rs  cli_deploy_agents.rs  cli_deploy_cleanup.rs  cli_deploy_disable_project_layer.rs  cli_deploy_empty_project_targets_section_does_not_override_user_layer.rs  cli_deploy_layers_flags.rs  cli_deploy_orphans.rs  cli_deploy_project_flag_overrides_home_config.rs  cli_deploy_skills.rs  cli_deploy_source_external.rs  cli_deploy_source_flag.rs  cli_deploy_source_global_layers_only.rs  cli_deploy_targets.rs  cli_deploy_user_layer_targets_config.rs  cli_deploy_verbose_provenance.rs  cli_deploy_verbose_variants.rs  cli_diff_includes_user_layer_assets.rs  cli_diff_source_external.rs  cli_error_docs_links.rs  cli_explain.rs  cli_help.rs  cli_home_deploy_global_lockfile.rs  cli_init_project_config_template.rs  cli_init_user.rs  cli_init_user_format.rs  cli_interactive_additional_layers_only.rs  cli_interactive_layer_stack_display.rs  cli_interactive_legacy_user_config_path.rs  cli_interactive_user_layer_empty.rs  cli_interactive_user_layer_path_config.rs  cli_json_check.rs  cli_json_deploy.rs  cli_layers.rs  cli_layers_format.rs  cli_layers_snapshot.rs  (+28 more)
(+400 files in other folders)
