[package]
name = "calvin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["std", "derive", "help"] }
ctrlc = "3"
dirs = "6.0.0"
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
toml = "0.8"
which = "8"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"

[profile.release.package."*"]
opt-level = "z"
