[package]
name = "calvin"
version = "0.4.0"
edition = "2021"
authors = ["Calvin Contributors"]
description = "PromptOps compiler and synchronization tool for AI coding assistants"
license = "MIT"
repository = "https://github.com/calvin-cli/calvin"
homepage = "https://github.com/calvin-cli/calvin"
readme = "README.md"
keywords = ["ai", "prompt", "cli", "devtools", "automation"]
categories = ["command-line-utilities", "development-tools"]

# cargo-binstall support
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/calvin-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "calvin"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/calvin-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
anyhow = "1"
is-terminal = "0.4"
clap = { version = "4", default-features = false, features = ["std", "derive", "help"] }
crossterm = "0.29"
ctrlc = "3"
dialoguer = { version = "0.12", default-features = false, features = ["fuzzy-select"] }
dirs = "6.0.0"
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_ignored = "0.1"
serde_json = { version = "1", default-features = false, features = ["std"] }
serde_yml = "0.0.12"
sha2 = "0.10"
similar = "2"
tempfile = "3"
thiserror = "2"
toml = "0.8"
unicode-width = "0.2"

[features]
claude = []

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"

[profile.release.package."*"]
opt-level = "z"

[dev-dependencies]
insta = "1.45.0"
